[fix] getRecommendation